# typed-argument-parser

./: .gitignore  .travis.yml  LICENSE  LICENSE.txt  README.md  blah.py  demo.py  demo_data_model.py  example.py  examples.py  pyproject.toml  setup.py  simple_example.py  subparser_demo.py
.github/workflows/: code-coverage.yml  python-package.yml  tap-code-coverage.yml  tap-tests.yml  tests.yml
demos/: demo_data_model.py
src/tap/: __init__.py  tap.py  tapify.py  utils.py
tap/: __init__.py  _version.py  config_file.py  parse_docstrings.py  parsing.py  runtime_config_file.py  tap.py  tap_class_from_data_model.py  tap_config.py  tapify.py  utils.py
tests/: integration.py  test_actions.py  test_convert_to_tap_class.py  test_docstring_parsing.py  test_documentation_integration.py  test_integration.py  test_load_config_files.py  test_load_json_config_files.py  test_readme_integration.py  test_subparser.py  test_tap_ignore.py  test_tapify.py  test_to_tap_class.py  test_utils.py  unit.py
typed_argument_parsing/: __init__.py  parse_docstrings.py  parsing.py  utils.py
